--- a/index.html
+++ b/index.html
@@ -15,6 +15,43 @@
         </table>
         <hr>
     </header>
+    <main>
+        <h2>Le mie spese</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>numero</th>
+                    <th>descrizione</th>
+                    <th>costo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120	&#8364;</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120	&#8364;</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120	&#8364;</td>
+                </tr>
+            </tbody>
+              <tfoot>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360 &#8364;</td>
+
+              </tfoot>
+        </table>
+    </main>
     
 </body>
 </html>
