--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
 
               </tfoot>
         </table>
+        <hr>
+        <h2>Cose da fare</h2>
+        <ul>
+            <li>Visitare la Tower of London &#935;</li>
+            <li>Visitare Greenwich &#8730;</li>
+            <li>Ascoltare un Artista di strada a Coven Garden &#8730;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#935;</li>
+        </ul>
+        <hr>
     </main>
     
 </body>
