aggiunta seconda lista

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1>il mio viaggio a londra</h1>
         <table>
-            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="Ruota panoramica">
             <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
             <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
         </table>
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h2>Le mie spese</h2>
-        <table>
+        <table> <!--inizio tabella-->
             <thead>
                 <tr>
                     <th>numero</th>
@@ -50,17 +50,45 @@
                     <td>360 &#8364;</td>
 
               </tfoot>
-        </table>
+        </table> <!--fine tabella-->
         <hr>
-        <h2>Cose da fare</h2>
+        <h2>Cose da fare</h2> <!--inizio lista-->
         <ul>
             <li>Visitare la Tower of London &#935;</li>
             <li>Visitare Greenwich &#8730;</li>
             <li>Ascoltare un Artista di strada a Coven Garden &#8730;</li>
             <li>Mangiare il tipico Fish and Chips inglese &#935;</li>
-        </ul>
+        </ul> <!--fine lista-->
         <hr>
+        <h2>Info utili &#166;</h2> <!--inizio seconda lista-->
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><strong>999</strong> &#8211; Emergenza</li>
+                    <li><strong>101</strong> &#8211; Numero poliza</li>
+                     <li><strong>111</strong> &#8211; Numero assistenza medica</li>
+                </ul>
+            </li>
+
+            <li>Hotel
+                <ul>
+                    <li><strong>Nome hotel</strong> &#166; Buchingham Palace</li>
+                    <li><strong>Indirizzo hotel</strong> &#166; Westminster, London SWIA 1AA, Regno Unito </li>
+                </ul>
+            </li>
+
+            <li>Aereo
+                <ul>
+                    <li><strong>Volo di andata</strong> &#166; YI234X, ore 9.30 da Milano Malpensa</li>
+                    <li><strong>Volo di ritorno</strong> &#166; Y1236X, ore 18.30 da London Heathrow</li>
+                </ul>
+            </li>
+        </ol>
+        <hr> <!--fine seconda lista-->
     </main>
+
+   
+
     
 </body>
 </html>
