--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 <body>
     <header>
         <h1>il mio viaggio a londra</h1>
-        <table>
-            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="Ruota panoramica">
-            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
-            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
-        </table>
+        <!-- <table>
+            <tr><img src="img/pexels-bill-emrich-230794-0.jpg" alt=""></tr>
+            <tr><img src="img/pexels-bill-emrich-230794-1.jpg" alt=""></tr>
+            <tr><img src="img/pexels-bill-emrich-230794-2.jpg" alt=""></tr>
+        </table> -->
+        <div style="width: 900px; height: auto;">
+            <img src="img/pexels-bill-emrich-230794-0.jpg"  alt="">
+            <img src="img/pexels-bill-emrich-230794-1.jpg"  alt="">
+            <img src="img/pexels-bill-emrich-230794-2.jpg"  alt="">
+        </div>
+
         <hr>
     </header>
     <main>
@@ -91,8 +97,7 @@
         <h2>Le foto</h2>
         <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="">
         <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="">
-
-        </footer>
+    </footer>
 
     
 </body>
