--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                     <th>descrizione</th>
                     <th>costo</th>
                 </tr>
-            </thead>
-            <tbody>
+            </thead><tbody>
                 <tr>
                     <td>1</td>
                     <td>Biglietto Aereo</td>
@@ -49,12 +48,10 @@
                     <td>Biglietto Aereo</td>
                     <td>120	&#8364;</td>
                 </tr>
-            </tbody>
-              <tfoot>
+            </tbody><tfoot>
                     <td>Totale</td>
                     <td></td>
                     <td>360 &#8364;</td>
-
               </tfoot>
         </table> <!--fine tabella-->
         <hr>
