--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <tr><img src="img/pexels-bill-emrich-230794-1.jpg" alt=""></tr>
             <tr><img src="img/pexels-bill-emrich-230794-2.jpg" alt=""></tr>
         </table> -->
-        <div style="width: 900px; height: auto;">
+        <div style="width: 909px; height: auto;">
             <img src="img/pexels-bill-emrich-230794-0.jpg"  alt="">
             <img src="img/pexels-bill-emrich-230794-1.jpg"  alt="">
             <img src="img/pexels-bill-emrich-230794-2.jpg"  alt="">
@@ -49,10 +49,9 @@
                     <td>120	&#8364;</td>
                 </tr>
             </tbody><tfoot>
-                    <td>Totale</td>
-                    <td></td>
+                    <td colspan="2">Totale</td>
                     <td>360 &#8364;</td>
-              </tfoot>
+                </tfoot>
         </table> <!--fine tabella-->
         <hr>
         <h2>Cose da fare</h2> <!--inizio lista-->
