--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </table> -->
         <div style="width: 909px; height: auto;">
             <img src="img/pexels-bill-emrich-230794-0.jpg"  alt="">
-            <img src="img/pexels-bill-emrich-230794-1.jpg"  alt="">
+            <img src="img/pexels-bill-emrich-230794-1.jpg"  style="margin-right: -4px;margin-left: -4px;" alt="">
             <img src="img/pexels-bill-emrich-230794-2.jpg"  alt="">
         </div>
 
