fixed img end the prjgect

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
             <tr><img src="img/pexels-bill-emrich-230794-0.jpg" alt=""></tr>
             <tr><img src="img/pexels-bill-emrich-230794-1.jpg" alt=""></tr>
             <tr><img src="img/pexels-bill-emrich-230794-2.jpg" alt=""></tr>
-        </table> -->
-        <div style="width: 909px; height: auto;">
-            <img src="img/pexels-bill-emrich-230794-0.jpg"  alt="">
-            <img src="img/pexels-bill-emrich-230794-1.jpg"  style="margin-right: -4px;margin-left: -4px;" alt="">
-            <img src="img/pexels-bill-emrich-230794-2.jpg"  alt="">
-        </div>
+        </table> METODO CON TABLE ANNI 90 -->
+       
+            <img src="img/pexels-bill-emrich-230794-0.jpg"  style="position: relative;left: 4px;" alt="">
+            <img src="img/pexels-bill-emrich-230794-1.jpg"  alt="">
+            <img src="img/pexels-bill-emrich-230794-2.jpg"  style="position: relative;right: 4px; "alt="">
+
+
 
         <hr>
     </header>
@@ -49,6 +50,7 @@
                     <td>120	&#8364;</td>
                 </tr>
             </tbody><tfoot>
+                
                     <td colspan="2">Totale</td>
                     <td>360 &#8364;</td>
                 </tfoot>
